--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde_json = "1.0.83"
-serde = "1.0.143"
+serde_json = "1.0.87"
+serde = "1.0.147"
+anyhow = "1.0.66"
